fixed homepage rececent work spacing

--- a/assets/sass/homepage.scss
+++ b/assets/sass/homepage.scss
@@ -68,7 +68,7 @@ header {
 #recent-work {
   h1 {
     text-align: center;
-    margin: 50px 0;
+    margin: 7% 0;
   }
   .more-work {
     color: $purple;
